# midii-exp

./: pyproject.toml
src/midii_exp/: __init__.py
test/: EF_effect_200.py  MGAE_200.py  devi_200.py  eval_200_detailed.csv  eval_200_summary.csv  exp51_gae_stats_200.csv  exp53_mae_stats_200.csv  figure_EF_effect.ipynb  figure_piano_roll.ipynb  figure_timing_deviation.ipynb  test.ipynb  test.py
test/sample/: ba_02499_-1_a_s09_m_03.mid  ba_02522_-3_s_s12_m_04.mid  ba_03032_+2_a_s01_f_02.mid  ba_03515_-4_s_s12_m_04.mid  ba_04460_+0_s_s12_m_04.mid  ba_04724_+0_s_s10_m_03.mid  ba_04819_+5_a_s17_f_04.mid  ba_04985_+0_a_s01_f_02.mid  ba_04993_-1_a_s09_m_03.mid  ba_04997_+0_a_s05_f_02.mid  ba_05123_+0_a_s14_f_03.mid  ba_05198_+0_s_s12_m_04.mid  ba_05215_+0_s_s11_m_03.mid  ba_05215_+4_a_s01_f_02.mid  ba_05526_+0_s_s16_f_04.mid  ba_05567_-4_s_s12_m_04.mid  ba_05583_+0_a_s05_f_02.mid  ba_05688_+0_a_s01_f_02.mid  ba_05688_+0_a_s14_f_03.mid  ba_05688_+0_s_s11_m_03.mid  ba_05688_-3_a_s09_m_03.mid  ba_05817_+0_a_s02_m_02.mid  ba_05862_+6_a_s14_f_03.mid  ba_06032_+0_s_s12_m_04.mid  ba_06120_+2_s_s16_f_04.mid  ba_06178_-6_s_s11_m_03.mid  ba_06279_+0_s_s12_m_04.mid  ba_06355_+0_a_s01_f_02.mid  ba_06358_+0_s_s10_m_03.mid  ba_06393_+0_a_s14_f_03.mid  ba_06545_+0_a_s14_f_03.mid  ba_07076_+0_a_s01_f_02.mid  ba_07076_+0_a_s02_m_02.mid  ba_07076_+0_s_s11_m_03.mid  ba_07523_-4_s_s12_m_04.mid  ba_07782_+5_a_s01_f_02.mid  ba_07782_-1_a_s09_m_03.mid  ba_07841_+0_s_s16_f_04.mid  ba_07846_+0_s_s04_m_02.mid  ba_08132_+0_a_s14_f_03.mid  (+159 more)
