[project]
name = "midii-exp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ccsss", email = "chansol0505@naver.com" }
]
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.1",
    "librosa>=0.11.0",
    "matplotlib>=3.10.6",
    "midii>=0.1.41",
    "pytest>=8.4.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
